--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -78,66 +78,6 @@
   background: transparent;
 }
 
-.bookmarksSection {
-  display: none;
-  position: absolute;
-  right: 0;
-  top: 100%;
-  width: 250px;
-  z-index: 9999;
-  padding: 10px;
-  border-radius: 8px;
-  /* background-color: white; */
-  /* box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15); */
-}
-
-.bookmarkWrapper {
-  position: relative;
-}
-
-.containerRight:hover .bookmarksSection,
-.bookmarksSection.visibility {
-  display: block;
-}
-
-.bookmarkWrapper:hover .bookmarksSection {
-  display: block;
-}
-
-.bookmarkedVisible {
-  position: absolute;
-  right: 10px;
-  /* border: 2px solid red; */
-  width: 260px;
-  background-color: #e0e0df;
-  padding: 20px;
-  border-radius: 10px;
-}
-
-.bookmarkedVisible p {
-  font-size: 12px;
-}
-
-.bookmarkedVisible .content {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.bookmarkedVisible .imgDiv {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.bookmarkedVisible .imgDiv img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
-
 /* ******************************************* Middle Container below the recipeHeading Container *************************************** */
 .recipeContainer .recipeMiddleContainer {
   display: flex;
@@ -733,13 +673,13 @@
     position: static;
   }
 
-  .bookmarksSection {
+  /* .bookmarksSection {
     top: 21%;
   }
 
   .bookmarkedVisible {
     padding: 0;
-    /* width: 180px; */
+    width: 180px;
   }
 
   .bookmarkedVisible p {
@@ -752,5 +692,5 @@
     justify-content: flex-start;
     gap: 4px;
     margin: 10px 4px;
-  }
+  } */
 }
