--- a/src/Components/Bookmark.css
+++ b/src/Components/Bookmark.css
@@ -32,9 +32,9 @@
   border-radius: 8px;
 } */
 
-.bookmarkWrapper {
-  /* position: relative; */
-}
+/* .bookmarkWrapper {
+  position: relative;
+} */
 
 /* .containerRight:hover .bookmarksSection,
 .bookmarksSection.visibility {
