--- a/src/Components/Recipes.css
+++ b/src/Components/Recipes.css
@@ -6,7 +6,6 @@
   margin: 20px auto;
   border-radius: 5px;
   flex-direction: column;
-
 }
 
 .recipeContainer .recipeHeadingContainer {
@@ -14,7 +13,9 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
-  width: 77vw;
+  width: 80vw;
+  margin-bottom: 20px;
+  /* border: 2px solid red; */
 }
 
 /* ***************************************************** Left Container of the recipe heading **********************************************/
@@ -84,10 +85,10 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  width: 90%;
+  width: 80vw;
   /* margin: 20px 0; */
   gap: 20px;
-
+  /* border: 2px solid red; */
 }
 
 /* ************************************************** Left Middle Container below the recipeHeading Container ***************************** */
@@ -134,13 +135,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 10px;
+  padding: 10px 0;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  margin: 5px 0px;
+  /* margin: 5px 0px; */
   border-bottom: 2px solid #ec795c;
   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
 }
 
 .recipeContainer .recipeMiddleContainer .recipeMiddleLeft .recipeSection:hover {
@@ -168,15 +168,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
 }
 
 .recipeContainer .recipeMiddleContainer .recipeMiddleLeft .recipeSection img {
   object-fit: cover;
   display: block;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50px;
 }
 
@@ -195,7 +195,9 @@
   .recipeMiddleLeft
   .recipeSection
   .recipeInner {
-  letter-spacing: 1.2px;
+  letter-spacing: 0.5px;
+  width: 260px;
+  /* border: 2px solid red; */
 }
 
 .recipeContainer
@@ -282,8 +284,6 @@
   font-size: 22px;
   border: none;
 }
-
-
 
 /* *************************************************** Section 3 of Middle Right Container ****************************************** */
 .recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-3 {
@@ -424,10 +424,9 @@
   font-weight: 300;
 }
 
-  .bookmarkButton {
-    position: relative;
-  }
-
+.bookmarkButton {
+  position: relative;
+}
 
 @media screen and (max-width: 1000px) {
   .recipeContainer {
@@ -546,7 +545,7 @@
     overflow: hidden;
     gap: 10px;
     /* padding: 10px 5px; */
-    width: auto;
+    /* width: auto; */
   }
 
   .recipeContainer .recipeHeadingContainer .containerLeft img {
@@ -568,7 +567,7 @@
   }
 
   .recipeContainer .recipeHeadingContainer .containerLeft input {
-    width: 60vw;
+    width: 58vw;
     font-size: 3.25vw;
   }
 
@@ -596,9 +595,9 @@
     .recipe1
     .recipeInner
     p {
-    font-size: 4vw;
-    font-weight: 300;
-    text-transform: uppercase;
+    /* font-size: 4vw; */
+    font-weight: 400;
+    text-transform: capitalize;
   }
 
   .recipeContainer
@@ -678,8 +677,6 @@
     font-size: 10px;
   }
 
-
-  
   /* .bookmarkWrapper {
     position: relative;
   } */
