--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 
 :root {
   background-color: rgb(224, 224, 223);
+  overflow-x: hidden;
 }
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
