--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,32 +1,100 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+DK+Loopet:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playwrite+DK+Loopet:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Carter+One&family=Chewy&family=Cinzel+Decorative&family=Cormorant+Garamond&family=Fredoka:wght@400;600&family=Merriweather&family=Montserrat:wght@400;600&family=Nunito:wght@400;600&family=Pacifico&family=Playfair+Display:wght@400;600&family=Poppins:wght@400;600;800&family=Quicksand:wght@400;600&family=Raleway:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2&family=Carter+One&family=Chewy&family=Cinzel+Decorative&family=Cormorant+Garamond&family=Fredoka:wght@400;600&family=Merriweather&family=Montserrat:wght@400;600&family=Nunito:wght@400;600&family=Pacifico&family=Playfair+Display:wght@400;600&family=Poppins:wght@400;600;800&family=Quicksand:wght@400;600&family=Raleway:wght@400;600&display=swap");
 
 .headerContainer {
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
-  color: #333;
-  padding: 20px 0;
-  /* border:2px solid red; */
-  background-color: #f7e2dd;
-  box-shadow: 0px 0px 70px #f87e5f;
-  text-transform: uppercase;
-  width:100%;
-}
-
-.headerContainer .headerLeft {
   display: flex;
   align-items: center;
-  /* gap: 10px; */
+  justify-content: space-between;
+  /* border: 2px solid red; */
+  width: 100%;
+  padding: 20px 20px;
+  text-transform: capitalize;
+  color: #333;
+  font-weight: 500;
+  /* color: #333;
+  padding: 20px 0; */
   /* border:2px solid red; */
-  justify-content: center;
+  /* background-color: #f7e2dd;
+  box-shadow: 0px 0px 70px #f87e5f;
+  text-transform: uppercase;
+  width:100%; */
 }
 
-.headerContainer .headerLeft img {
+.headerContainer .logoContainer {
+  /* border: 2px solid red; */
+}
+
+.headerContainer .logoContainer img {
   width: 40px;
 }
+
+.headerContainer .listContainer ul {
+  list-style: none;
+  /* border: 2px solid green; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 60px;
+  cursor: pointer;
+  /* font-size: 1vw; */
+}
+
+.headerContainer .listContainer ul li {
+  position: relative;
+}
+
+.headerContainer .listContainer ul li a::after {
+  content: "";
+  width: 0%;
+  height: 3px;
+  background-color: #fd6b47;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+
+.headerContainer .listContainer ul li:hover a::after,
+.headerContainer .listContainer ul li.active a:after {
+  width: 100%;
+}
+
+.active a {
+  color: #fd6b47;
+  width: 100%;
+}
+
+.headerContainer .loginContainer button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border: 2px solid #f48f82;
+  border-radius: 5px;
+  width: 80px;
+  height: 35px;
+  transition: all 0.5s ease-in-out;
+  font-weight: 600;
+  /* border: 2px solid #333; */
+  color: #fd6b47;
+}
+
+.headerContainer .loginContainer button:hover {
+  background-color: #fd6b47;
+  border: 2px solid #333;
+  color: #333;
+}
+
+/* .headerContainer .headerLeft {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border:2px solid red;
+  justify-content: center;
+} */
 
 .headerContainer .headerLeft h1 {
   /* border:2px solid red; */
@@ -47,10 +115,10 @@
   font-family: 'Playfair Display', serif;
   font-family: 'Poppins', sans-serif;
   font-family: 'Montserrat', sans-serif; */
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   /* font-family: 'Quicksand', sans-serif;
   font-family: 'Raleway', sans-serif; */
-  font-family: 'Fredoka', sans-serif;
+  font-family: "Fredoka", sans-serif;
   /* font-family: 'Baloo 2', cursive; */
   /* font-family: 'Chewy', cursive;
   font-family: 'Carter One', cursive;
@@ -68,7 +136,7 @@
   color: #000;
 } */
 
-.headerContainer a {
+/* .headerContainer a {
   text-decoration: none;
   color: #333;
 }
@@ -78,17 +146,31 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-}
+} */
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1000px) {
+  .headerContainer .listContainer,
+  .loginContainer button {
+    font-size: 1.75vw;
+  }
+}
+@media screen and (max-width: 600px) {
+  .headerContainer .listContainer,
+  .loginContainer button {
+    /* font-size: 2vw; */
+    visibility: hidden;
+    display: none;
+  }
+}
+/* @media screen and (max-width: 480px) {
   .headerContainer .headerRight .rightPart {
     /* gap:4px; */
-    /* border:2px solid red; */
-    font-size: 2.75vw;
-  }
+/* border:2px solid red; */
+/* font-size: 2.75vw;
+  } */
 
-  .headerContainer .headerLeft h1 {
+/* .headerContainer .headerLeft h1 {
     font-weight: 700;
     font-size: 8vw;
-  }
-}
+  } */
+/* } */
