--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+#root {
+  overflow-x: hidden;
+  /* max-width: 100%; */
+  position: relative;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
