--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -20,10 +20,15 @@
   box-shadow: 0px 0px 70px #f87e5f;
   text-transform: uppercase;
   width:100%; */
+  overflow-x: hidden;
+  /* position: relative; */
 }
 
 .headerContainer .logoContainer {
   /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .headerContainer .logoContainer img {
@@ -148,12 +153,22 @@
   gap: 10px;
 } */
 
+/* .sideBarContainer {
+  display: none;
+} */
+
+.headerContainer .logoContainer .mealzoHeading,
+.burgerMenu {
+  display: none;
+}
+
 @media screen and (max-width: 1000px) {
   .headerContainer .listContainer,
   .loginContainer button {
     font-size: 1.75vw;
   }
 }
+
 @media screen and (max-width: 600px) {
   .headerContainer .listContainer,
   .loginContainer button {
@@ -161,16 +176,51 @@
     visibility: hidden;
     display: none;
   }
-}
-/* @media screen and (max-width: 480px) {
-  .headerContainer .headerRight .rightPart {
-    /* gap:4px; */
-/* border:2px solid red; */
-/* font-size: 2.75vw;
+
+  .headerContainer .logoContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    /* margin: auto; */
+    /* border: 2px solid red; */
+  }
+
+  .headerContainer .logoContainer .mealzoHeading,
+  .burgerMenu {
+    display: block;
+  }
+
+  .mealzoHeading {
+    font-size: 32px;
+    font-size: 6vw;
+    color: #333;
+  }
+
+  .burgerMenu {
+    cursor: pointer;
+    color: #fd6b47;
+    font-size: 20px;
+    font-size: 5vw;
+  }
+
+  .headerContainer .logoContainer img {
+    width: 9vw;
+  }
+
+  /* .headerContainer {
+    position: relative;
   } */
 
-/* .headerContainer .headerLeft h1 {
-    font-weight: 700;
-    font-size: 8vw;
+  /* .sideBarContainer {
+    position: absolute;
+    right: 0px;
+    top: 0;
+    display: block;
+    background-color: #fd6b47;
+    transition: all 2s ease-in-out;
+    width:80%;
+    color: #333;
+    height:100dvh;
   } */
-/* } */
+}
