--- a/src/Components/SideBar.css
+++ b/src/Components/SideBar.css
@@ -1,49 +1,123 @@
 .sideBarContainer {
-  border: 2px solid red;
   height: 100dvh;
-  background-color: aqua;
-  display: flex;
-  flex-direction: column;
   padding: 10px 10px;
   display: none;
-}
-
-.sideBarContainer {
+  background-color: rgb(181, 181, 181);
+  align-items: center;
+  justify-content: space-between;
   position: fixed;
   right: -300px;
   top: 0;
   width: 300px;
-  /* width:80%; */
   height: 100vh;
-  background-color: aqua;
 }
 
-.sideBarContainer .sideBarCrossContainer {
+.sideBarContainer .sideBarInnerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 320px;
+}
+
+.sideBarContainer .sideBarInnerContainer .sideBarInnerContainer1 {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center; */
+}
+
+.sideBarContainer
+  .sideBarInnerContainer
+  .sideBarInnerContainer1
+  .sideBarCrossContainer {
   text-align: left;
-  /* border:2px solid red; */
   width: 100%;
   margin-bottom: 10px;
   padding-left: 10px;
+  font-size: 30px;
+  color: #ff7043;
+  cursor: pointer;
 }
 
-.sideBarContainer .sideBarListContainer ul {
+.sideBarContainer .sideBarInnerContainer .sideBarListContainer ul {
   list-style: none;
-  border: 2px solid bisque;
-  /* width: 90%; */
-  /* gap:30px; */
 }
 
-.sideBarContainer .sideBarListContainer ul li {
-  height: 50px;
-  /* border-bottom: 1px solid #333; */
-  border: 2px solid red;
+.sideBarContainer .sideBarInnerContainer .sideBarListContainer ul li {
+  height: 60px;
   border-radius: 5px;
   display: flex;
-  /* text-align: center; */
   align-items: center;
   justify-content: flex-start;
-  padding-left: 10px;
   margin-bottom: 10px;
+  letter-spacing: 1.4px;
+  font-size: 20px;
+  gap: 5px;
+  cursor: pointer;
+  border: 2px solid #474747;
+  border: 2px solid #ff7043;
+  transition: all 0.3s ease-in-out;
+}
+
+.sideBarContainer
+  .sideBarInnerContainer
+  .sideBarInnerContainer1
+  .sideBarListContainer
+  ul
+  li
+  .iconContainer {
+  width: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  font-size: 28px;
+}
+
+.sideBarContainer
+  .sideBarInnerContainer
+  .sideBarInnerContainer1
+  .sideBarListContainer
+  ul
+  li
+  span {
+  width: 100%;
+  font-weight: 500;
+}
+
+.sideBarContainer
+  .sideBarInnerContainer
+  .sideBarInnerContainer1
+  .sideBarListContainer
+  ul
+  li:hover {
+  background-color: #ff7043;
+  transition: all 0.3s ease-in-out;
+}
+
+.sideBarContainer .sideBarInnerContainer .sideBarInnerContainer2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 5px;
+}
+
+.sideBarContainer
+  .sideBarInnerContainer
+  .sideBarInnerContainer2
+  .sideBarLogoContainer {
+  width: 50px;
+  display: flex;
+  align-items: center;
+}
+.sideBarContainer
+  .sideBarInnerContainer
+  .sideBarInnerContainer2
+  .sideBarLogoContainer
+  img {
+  width: 90%;
+  height: 90%;
 }
 
 @media screen and (max-width: 600px) {
@@ -53,6 +127,6 @@
   }
 
   .show {
-    right:0px;
+    right: 0px;
   }
 }
