"style: Updated colour for the button border"

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -77,7 +77,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  border: 2px solid #f48f82;
+  border: 2px solid #fd6b47;
   border-radius: 5px;
   width: 80px;
   height: 35px;
