--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -6,7 +6,8 @@
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  /* border:2px solid red; */
+  border:2px solid red;
+  height:88dvh;
 }
 
 .heroSection .headingContainer {
