--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -8,6 +8,43 @@
 .heroContainer .heroLeft {
   width: 50%;
   height: 100%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  border: 2px solid red;
+  padding-left: 50px;
+}
+
+.heroContainer .heroLeft h1 {
+  border: 2px solid black;
+  font-size: 92px;
+}
+
+.heroContainer .heroLeft span {
+  border: 2px solid green;
+  font-size: 80px;
+}
+
+.heroContainer .heroLeft p {
+  border: 2px solid red;
+}
+
+.heroContainer .heroLeft .recipesButton {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.heroContainer .heroLeft a,
+a:hover,
+a:active {
+  color: black;
+}
+
+.heroContainer a:active {
+  text-decoration: none;
 }
 
 .heroContainer .heroRight {
@@ -20,13 +57,12 @@
 
 .heroContainer .heroRight img {
   height: 100%;
-  width:40vw;
+  width: 40vw;
 }
 
-
 @media screen and (max-width: 600px) {
-    .heroContainer .heroRight img {
-        height: 80%;
-        width: 50vw;
-    }
+  .heroContainer .heroRight img {
+    height: 80%;
+    width: 50vw;
+  }
 }
