--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -12,22 +12,22 @@
   align-items: flex-start;
   flex-direction: column;
   justify-content: center;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   padding-left: 50px;
 }
 
 .heroContainer .heroLeft h1 {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   font-size: 92px;
 }
 
 .heroContainer .heroLeft span {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   font-size: 80px;
 }
 
 .heroContainer .heroLeft p {
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .heroContainer .heroLeft .recipesButton {
