--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -1,33 +1,37 @@
 .heroContainer {
-  height: 88dvh;
+  /* height: 88dvh; */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .heroContainer .heroLeft {
-  width: 50%;
-  height: 100%;
+  width: 60%;
+  /* height: 100%; */
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: center;
-  /* border: 2px solid red; */
-  padding-left: 50px;
+  padding-left: 20px;
+  gap: 20px;
 }
 
 .heroContainer .heroLeft h1 {
-  /* border: 2px solid black; */
-  font-size: 92px;
+  font-size: 120px;
+  font-size: 8vw;
 }
 
 .heroContainer .heroLeft span {
-  /* border: 2px solid green; */
   font-size: 80px;
+  font-size: 7vw;
+  color: #fd6b47;
 }
 
 .heroContainer .heroLeft p {
-  /* border: 2px solid red; */
+  line-height: 1.7;
+  font-size: 2vw;
+  font-weight: 400;
+  color: dimgray;
 }
 
 .heroContainer .heroLeft .recipesButton {
@@ -48,7 +52,7 @@ a:active {
 }
 
 .heroContainer .heroRight {
-  width: 50%;
+  width: 40%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -57,12 +61,33 @@ a:active {
 
 .heroContainer .heroRight img {
   height: 100%;
-  width: 40vw;
+  width: 28vw;
 }
 
 @media screen and (max-width: 600px) {
+  .heroContainer {
+    height: 100%;
+  }
+
   .heroContainer .heroRight img {
-    height: 80%;
-    width: 50vw;
+    width: 40vw;
+    height: 60dvh;
+  }
+
+  .heroContainer .heroLeft h1 {
+    font-size: 56px;
+  }
+
+  .heroContainer .heroLeft span {
+    font-size: 28px;
+  }
+
+  .heroContainer .heroLeft {
+    gap:10px;
+  }
+
+  .heroContainer .heroLeft p {
+    font-size: 14px;
+    letter-spacing: 1.2px;
   }
 }
