--- a/src/Components/Button.css
+++ b/src/Components/Button.css
@@ -18,3 +18,10 @@
   border: 2px solid #333;
   color: #333;
 }
+
+@media screen and (max-width: 600px) {
+  .buttonContainer button {
+    padding: 5px;
+  }
+  
+}
