--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,5 +1,120 @@
-.heroSection {
-  /* border: 2px solid red; */
+.categoriesContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 40px;
+  background-color: #f0bbad;
+  flex-direction: column;
+}
+
+.categoriesContainer .categoriesHeading {
+  font-weight: 700;
+  font-size: 40px;
+  padding: 24px;
+  width: 100%;
+  text-align: center;
+}
+
+.categoriesContainer .categoriesSection {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  /* flex-wrap: wrap; */
+}
+
+.categoriesContainer .categoriesSection .card1 {
+  /* width: 90%; */
+  /* max-width: 431px; */
+  /* aspect-ratio: 3 / 4; */
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  width: 25vw;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  background-color: #ffffff;
+}
+
+.categoriesContainer .categoriesSection .card1 .imgDiv {
+  width: 100%;
+  height: 287px;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+}
+
+.categoriesContainer .categoriesSection .card1 .imgDiv img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.categoriesContainer .categoriesSection .card1 .cardDescription {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 16px;
+  color: #333333;
+}
+
+.categoriesContainer
+  .categoriesSection
+  .card1
+  .cardDescription
+  .ratingContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 3px;
+  width: 100%;
+  color: #fd6b47;
+  padding: 8px 0;
+}
+.categoriesContainer
+  .categoriesSection
+  .card1
+  .cardDescription
+  .ratingContainer
+  span {
+  font-size: 24px;
+}
+
+.categoriesContainer .categoriesSection .card1 .cardDescription h1 {
+  font-size: 32px;
+  font-weight: 100;
+  letter-spacing: 1.2px;
+  padding-bottom: 12px;
+  color: #fd6b47;
+}
+
+.categoriesContainer
+  .categoriesSection
+  .card1
+  .cardDescription
+  .horizontalLine {
+  height: 2px;
+  width: 100%;
+  background-color: #333333;
+  outline: none;
+  border: none;
+  margin-bottom: 16px;
+}
+
+.categoriesContainer .categoriesSection .card1 .cardDescription p {
+  font-size: 20px;
+  line-height: 33px;
+  /* border:2px solid red; */
+  width: 100%;
+}
+/* .heroSection {
   height: 400px;
   display: flex;
   align-items: center;
@@ -56,7 +171,6 @@
 .imageContainer {
   margin: 0 auto;
   padding: 20px 0;
-  /* max-width: 1000px; */
   overflow: hidden;
   display: flex;
   border-radius: 150px;
@@ -118,7 +232,6 @@
     letter-spacing: 1.2px;
     line-height: 55px;
     margin-top: 40px;
-    /* border:2px solid red; */
   }
 
   .heroSection .headingContainer {
@@ -144,4 +257,4 @@
     width:150px;
     height:150px;
   }
-}
+} */
