--- a/src/Components/ImageSlider.css
+++ b/src/Components/ImageSlider.css
@@ -11,17 +11,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 95%;
+  width: 90%;
   padding: 30px;
   background-color: #ff9075;
   border-radius: 38px;
-  gap: 2vw;
+  position: relative;
 }
 
 .sliderContainer .imageContainer {
-  /* border: 2px solid red; */
-  /* width: 200px; */
-  /* height: 148px; */
   width: 10vw;
   height: 10vw;
   background-position: center;
@@ -33,4 +30,33 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.sliderContainer .innerSliderContainer .arrowLeftContainer {
+  position: absolute;
+  left: -20px;
+  color: #fefffe;
+  height: 3vw;
+  width: 3vw;
+  top: 6vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #fd6b47;
+}
+
+.sliderContainer .innerSliderContainer .arrowRightContainer {
+  position: absolute;
+  right: 0;
+  top: 6vw;
+  right: -20px;
+  color: #fefffe;
+  height: 3vw;
+  width: 3vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #fd6b47;
 }
